<resources>
    <string name="app_name">Demande de pieces Etat Civil</string>
    <string name="hello_android">Hello Android !</string>
    <string name="demander">Demander</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="me_connecter">Me connecter</string>
    <string name="email_or_username">email_or_username</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte ?</string>
    <string name="logo_du_senegal">logo du senegal</string>
    <string name="logo_du_ministere">logo du ministere</string>
    <string name="logo_appli">logo appli</string>
    <string name="prenom_s">Prenom(s)</string>
    <string name="nom">Nom</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="lieu_de_naissance">Lieu de naissance</string>
    <string name="m_inscrire">M\'inscrire</string>
    <string name="image_demande">image demande</string>
    <string name="en_cours">en cours</string>
    <string name="traitement_demande_termine">traitement demande termine</string>
    <string name="faire_une_demande">Faire une demande</string>
    <string name="demandes_en_cours">Demandes en cours</string>
    <string name="demandes_d_j_prises_en_charge">Demandes déjà prises en charge</string>
    <string name="bouton_de_retour">bouton de retour</string>
    <string name="menu">menu</string>
    <string name="mes_demandes">Mes demandes</string>
    <string name="veuillez_selectionner_la_pi_ce_dont_vous_souhaitez_faire_la_demande">Veuillez selectionner la pièce dont vous souhaitez faire la demande</string>
    <string name="bulletin_de_naissance">Bulletin de naissance</string>
    <string name="envoyer_la_r_ponse_par_mail_galement">Envoyer la réponse par mail également</string>
    <string name="extrait_de_naissance">Extrait de naissance</string>
    <string name="certificat_de_domicile">Certificat de domicile</string>
    <string name="certficat_de_residence">Certficat de résidence</string>
    <string name="carte_nationale_d_identit">Carte nationale d\'identité</string>
    <string name="casier_judiciaire">Casier judiciaire</string>
    <string name="certificat_de_bonne_vie_et_moeurs">Certificat de bonne vie et moeurs</string>
    <string name="certificat_de_nationalit">Certificat de nationalité</string>
    <string name="passeport">Passeport</string>
    <string name="certificat_de_mariage">Certificat de mariage</string>
    <string name="certificat_de_non_inscription">Certificat de non inscription</string>
    <string name="certificat_de_divorce">Certificat de divorce</string>
    <string name="bulletin_de_deces">Bulletin de décès</string>
    <string name="jugement_d_h_r_dit">Jugement d\'hérédité</string>
    <string name="certificat_de_perte">Certificat de perte</string>
</resources>