<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_primary" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_margin="12dp" >

        <ImageView
            android:id="@+id/toolbar_imageview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/bouton_de_retour"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/toolbar_textview_demande"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/toolbar_imageview_back"
            android:layout_centerVertical="true"
            android:text="@string/mes_demandes"
            android:layout_marginStart="12dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/toolbar_imageview_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_menu_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/menu" />

    </RelativeLayout>

</RelativeLayout>